--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,13 +1,15 @@
 <h1>My Pets</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th></th>
+      <th><button type="button" class="btn btn-warning"><%= link_to 'Create New Pet', new_pet_path %></button></th>
       <th>Name</th>
+      <th colspan="3" class="transparent"></th>
       <th>Max weight</th>
       <th>Foods Eaten</th>
-      <th colspan="3"></th>
+      <th>Exercises Done</th>
+      
     </tr>
   </thead>
 
@@ -16,16 +18,16 @@
       <tr>
         <td><%= image_tag(pet.picture_url, width: 200) if pet.picture.present? %></td>
         <td><%= pet.name %></td>
+        <td><button type="button" class="btn btn-warning"> <%= link_to 'Show', pet %></button></td>
+        <td><button type="button" class="btn btn-warning"> <%= link_to 'Edit', edit_pet_path(pet) %></button></td>
+        <td><button type="button" class="btn btn-warning"> <%= link_to 'Delete', pet, method: :delete, data: { confirm: 'Are you sure?' } %></button></td>
         <td><%= pet.max_weight %> kg</td>
         <td><%= pet.eaten_foods %></td>
-        <td><%= link_to 'Show', pet %></td>
-        <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
-        <td><%= link_to 'Delete', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <td><%= pet.exercises_done %></td>
+              </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Pet', new_pet_path %>
